# simple-png

./: .gitignore  Cargo.toml  README.md
benchmark/: index.html  script.js  test_results.json
png-suite-bench/: index.html  script.js
src/: chunks.rs  crc.rs  decoder.rs  filters.rs  image_data.rs  interlacing.rs  lib.rs  main.rs  pixel.rs  png.rs  scanlines.rs  utils.rs
src/chunks/: crc.rs  idat.rs  iend.rs  ihdr.rs  mod.rs  phys.rs  plte.rs  trns.rs
tests/decoding/: main.rs
tests/decoding/snapshots/: decoding__png_suite__basi0g01.snap  decoding__png_suite__basi0g02.snap  decoding__png_suite__basi0g04.snap  decoding__png_suite__basi0g08.snap  decoding__png_suite__basi0g16.snap  decoding__png_suite__basi2c08.snap  decoding__png_suite__basi2c16.snap  decoding__png_suite__basi3p01.snap  decoding__png_suite__basi3p02.snap  decoding__png_suite__basi3p04.snap  decoding__png_suite__basi3p08.snap  decoding__png_suite__basi4a08.snap  decoding__png_suite__basi4a16.snap  decoding__png_suite__basi6a08.snap  decoding__png_suite__basi6a16.snap  decoding__png_suite__basn0g01.snap  decoding__png_suite__basn0g02.snap  decoding__png_suite__basn0g04.snap  decoding__png_suite__basn0g08.snap  decoding__png_suite__basn0g16.snap  decoding__png_suite__basn2c08.snap  decoding__png_suite__basn2c16.snap  decoding__png_suite__basn3p01.snap  decoding__png_suite__basn3p02.snap  decoding__png_suite__basn3p04.snap  decoding__png_suite__basn3p08.snap  decoding__png_suite__basn4a08.snap  decoding__png_suite__basn4a16.snap  decoding__png_suite__basn6a08.snap  decoding__png_suite__basn6a16.snap  (+126 more)
