[package]
name = "simple-png"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "process-image"
path = "src/bin/process_image.rs"

[[bin]]
name = "visual-bench"
path = "src/bin/visual_bench.rs"

[dependencies]
anyhow = "1.0.71"
miniz_oxide = { version = "0.7.1", features = ["std"] }
nom = "7.1.3"

[dev-dependencies]
insta = "1.29.0"
