[package]
name = "simple-png"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "process-image"
path = "src/bin/process_image.rs"

[[bin]]
name = "visual-bench"
path = "src/bin/visual_bench.rs"

[dependencies]
anyhow = "1.0.71"
log = "0.4.18"
miniz_oxide = { version = "0.7.1", features = ["std"] }
nom = "7.1.3"
pretty_env_logger = "0.5.0"
serde_json = "1.0.96"
time = { version = "0.3.21", features = ["serde-human-readable"] }

[dev-dependencies]
insta = "1.29.0"
